samples/errors/array_out_of_bounds.lox
// Error: arrayGet out of bounds should produce runtime error
var a = newArray();
arrayPush(a, 10);
arrayGet(a, 5);
